# blog-flask

./: .dockerignore  .gitignore  Dockerfile  Helmfile.yaml  Jenkinsfile  LICENSE  README.md  app.py  docker-compose.yaml  forms.py  helmfile.yaml  pyproject.toml  requirements.txt
charts/flask-blog-chart/: Chart.yaml
charts/flask-blog-chart/templates/: configMap.yaml  secret.yaml  service.yaml  statefulset.yaml
nginx/: nginx.conf
scripts/: docker-entrypoint.sh  find_name_version.sh
servers-jsons/: servers-docker.json  servers-k8s.json
static/css/: clean-blog.css  clean-blog.min.css
templates/: about.html  contact.html  error.html  footer.html  header.html  index.html  login.html  make-post.html  post.html  register.html
terraform/: agent_config.sh  compute.tf  gke.tf  jenkins.sh  main.tf  registry.tf  variables.tf
terraform/common/: provider.tf
terraform/modules/main/: agent_config.sh  compute.tf  data.tf  firewall.tf  gke.tf  iam_binding.tf  registry.tf  service_account.tf  static_ip.tf  suffix.tf  variables.tf
terraform/modules/main/scripts/: jenkins.tmpl
values/: flask-blog-values.yaml  pgadmin4-values.yaml  postgres-values.yaml
